--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 server.port = 5000
 
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+
+spring.datasource.url=jdbc:mysql://localhost:3306/blog-app
 spring.datasource.username=root
 spring.datasource.password=Audir8v10
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 
+
+
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
+
+project.image=images/
+
+logging.level.org.springframework.security=DEBUG
 
 
